docs: implement internationalization and website settings update
- Remove book metadata, chapters list, bibliography, and other configurations.
- Add profiles for localization support in Russian and English.
- Configure website settings, including navbar background and a search option.

Signed-off-by: Eugene Letenkov <eugene@letenkov.ru>

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,45 +1,15 @@
 project:
   type: book
   output-dir: docs
-
-book:
-  title: "Introduction to Zig"
-  subtitle: "a project-based book"
-  author: "Pedro Duarte Faria"
-  edition: 1
-  date: "today"
-  google-analytics: "G-6CHJXK4CEV"
-  cover-image: "Cover/cover-artv3.png"
-  chapters:
-    - index.qmd
-    - Chapters/01-zig-weird.qmd
-    - Chapters/03-structs.qmd
-    - Chapters/01-memory.qmd
-    - Chapters/01-base64.qmd
-    - Chapters/02-debugging.qmd
-    - Chapters/05-pointers.qmd
-    - Chapters/04-http-server.qmd
-    - Chapters/03-unittests.qmd
-    - Chapters/07-build-system.qmd
-    - Chapters/09-error-handling.qmd
-    - Chapters/09-data-structures.qmd
-    - Chapters/10-stack-project.qmd
-    - Chapters/12-file-op.qmd
-    - Chapters/14-zig-c-interop.qmd
-    - Chapters/13-image-filter.qmd
-    - Chapters/14-threads.qmd
-    - Chapters/15-vectors.qmd
-    - references.qmd
-
-bibliography: references.bib
-execute:
-  freeze: auto
-
-
-highlight-style: github
-format:
-  html:
-    theme:
-      light: cosmo
-      dark: darkly
-
+profiles:
+  - ru
+  - en
+website:
+  navbar:
+    background: primary
+    search: true
+    left:
+      - text: "Home"
+        href: index.qmd
+      - talks.qmd
+      - about.qmd 
