docs: add new chapter on Zig language to book structure
- Add a new chapter file `01-zig-weird-ru.qmd` introducing the Zig programming language, emphasizing its simplicity and modern features compared to C and C++.
- Include the new chapter in the `_quarto-ru.yml` configuration file for the book structure.

Signed-off-by: Eugene Letenkov <eugene@letenkov.ru>

--- a/_quarto-ru.yml
+++ b/_quarto-ru.yml
@@ -12,6 +12,7 @@ book:
   cover-image: "Cover/cover-artv3.png"
   chapters:
     - index.qmd
+    - Chapters/01-zig-weird-ru.qmd
     - references.qmd
 
 bibliography: references.bib
